src/.vuepress/styles/index.styl
/**
 * Custom Styles here.
 *
 * ref：https://v1.vuepress.vuejs.org/config/#index-styl
 */

div[class~=language-rust]:before {
    content:"rust"
}


a:not(.v-btn--has-bg) {
    text-decoration: none !important;
    color: #f6a17c !important;
}

.icon.outbound {
    display: none !important;
}

iframe {
    margin-top: 3rem;
    margin-bottom: 3rem;
    width: 900px;
    height: 55vw;
    max-width: 100%;
    max-height: 500px;
}

.cursor-pointer {
  cursor: pointer;
}

body {
  font-size: 1.2rem;
  color: #dadada !important;
}

.theme--dark.v-application {
  color: #dadada !important;
}

h1 {
  margin-bottom: 1rem;
}

h2 {
  border: none !important;
  margin-bottom:1rem;
}

.code-unstyled {
  all: unset !important;
}

